// Copyright 2025 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.scopes.access.v1;

import "teleport/scopes/access/v1/accesslist.proto";
import "teleport/scopes/access/v1/accesslistmember.proto";
import "teleport/scopes/access/v1/assignment.proto";
import "teleport/scopes/access/v1/role.proto";
import "teleport/scopes/v1/scopes.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/scopes/access/v1;accessv1";

// ScopedAccessService provides an API for managing scoped access-control resources.
service ScopedAccessService {
  // GetScopedRole gets a scoped role by name.
  rpc GetScopedRole(GetScopedRoleRequest) returns (GetScopedRoleResponse);

  // ListScopedRoles returns a paginated list of scoped roles.
  rpc ListScopedRoles(ListScopedRolesRequest) returns (ListScopedRolesResponse);

  // CreateScopedRole creates a new scoped role.
  rpc CreateScopedRole(CreateScopedRoleRequest) returns (CreateScopedRoleResponse);

  // UpdateScopedRole updates a scoped role.
  rpc UpdateScopedRole(UpdateScopedRoleRequest) returns (UpdateScopedRoleResponse);

  // DeleteScopedRole deletes a scoped role. Note that scoped role deletion is always
  // conditional. Scoped roles cannot be deleted if referenced by any existing assignment
  // and deletes may fail due to concurrent modification.
  rpc DeleteScopedRole(DeleteScopedRoleRequest) returns (DeleteScopedRoleResponse);

  // GetScopedRoleAssignment gets a scoped role assignment by name.
  rpc GetScopedRoleAssignment(GetScopedRoleAssignmentRequest) returns (GetScopedRoleAssignmentResponse);

  // ListScopedRoleAssignments returns a paginated list of scoped role assignments.
  rpc ListScopedRoleAssignments(ListScopedRoleAssignmentsRequest) returns (ListScopedRoleAssignmentsResponse);

  // CreateScopedRoleAssignment creates a new scoped role assignment.
  rpc CreateScopedRoleAssignment(CreateScopedRoleAssignmentRequest) returns (CreateScopedRoleAssignmentResponse);

  // DeleteScopedRoleAssignment deletes a scoped role assignment.
  rpc DeleteScopedRoleAssignment(DeleteScopedRoleAssignmentRequest) returns (DeleteScopedRoleAssignmentResponse);

  // GetScopedAccessList gets a scoped access list by name.
  rpc GetScopedAccessList(GetScopedAccessListRequest) returns (GetScopedAccessListResponse);

  // ListScopedAccessLists returns a paginated list of scoped access lists.
  rpc ListScopedAccessLists(ListScopedAccessListsRequest) returns (ListScopedAccessListsResponse);

  // CreateScopedAccessList creates a scoped access list.
  rpc CreateScopedAccessList(CreateScopedAccessListRequest) returns (CreateScopedAccessListResponse);

  // UpdateScopedAccessList updates a scoped access list.
  rpc UpdateScopedAccessList(UpdateScopedAccessListRequest) returns (UpdateScopedAccessListResponse);

  // DeleteScopedAccessList deletes a scoped access list.
  rpc DeleteScopedAccessList(DeleteScopedAccessListRequest) returns (DeleteScopedAccessListResponse);

  // GetScopedAccessListMember gets a scoped access list member by name.
  rpc GetScopedAccessListMember(GetScopedAccessListMemberRequest) returns (GetScopedAccessListMemberResponse);

  // ListScopedAccessListMembers returns a paginated list of scoped access list members.
  rpc ListScopedAccessListMembers(ListScopedAccessListMembersRequest) returns (ListScopedAccessListMembersResponse);

  // CreateScopedAccessListMember creates a scoped access list member.
  rpc CreateScopedAccessListMember(CreateScopedAccessListMemberRequest) returns (CreateScopedAccessListMemberResponse);

  // DeleteScopedAccessListMember deletes a scoped access list member.
  rpc DeleteScopedAccessListMember(DeleteScopedAccessListMemberRequest) returns (DeleteScopedAccessListMemberResponse);
}

// GetScopedRoleRequest is the request to get a scoped role.
message GetScopedRoleRequest {
  // Name is the name of the scoped role.
  string name = 1;
}

// GetScopedRoleResponse is the response to get a scoped role.
message GetScopedRoleResponse {
  // Role is the scoped role.
  ScopedRole role = 1;
}

// ListScopedRolesRequest is the request to list scoped roles.
message ListScopedRolesRequest {
  // PageSize is the maximum number of results to return.
  int32 page_size = 1;

  // PageToken is the pagination cursor used to start from where a previous request left off.
  string page_token = 2;

  // ResourceScope filters roles by their resource scope if specified.
  teleport.scopes.v1.Filter resource_scope = 3;

  // AssignableScope filters roles by their assignable scope if specified.
  teleport.scopes.v1.Filter assignable_scope = 4;
}

// ListScopedRolesResponse is the response to list scoped roles.
message ListScopedRolesResponse {
  // Roles is the list of scoped roles.
  repeated ScopedRole roles = 1;

  // NextPageToken is a pagination cursor usable to fetch the next page of results.
  string next_page_token = 2;
}

// CreateScopedRoleRequest is the request to create a scoped role.
message CreateScopedRoleRequest {
  // Role is the scoped role to create.
  ScopedRole role = 1;
}

// CreateScopedRoleResponse is the response to create a scoped role.
message CreateScopedRoleResponse {
  // Role is the scoped role that was created.
  ScopedRole role = 1;
}

// UpdateScopedRoleRequest is the request to update a scoped role.
message UpdateScopedRoleRequest {
  // Role is the scoped role to update.
  ScopedRole role = 1;
}

// UpdateScopedRoleResponse is the response to update a scoped role.
message UpdateScopedRoleResponse {
  // Role is the post-update scoped role.
  ScopedRole role = 1;
}

// DeleteScopedRoleRequest is the request to delete a scoped role.
message DeleteScopedRoleRequest {
  // Name is the name of the scoped role to delete.
  string name = 1;

  // Revision asserts the revision of the scoped role to delete (optional).
  string revision = 2;
}

// DeleteScopedRoleResponse is the response to delete a scoped role.
message DeleteScopedRoleResponse {}

// GetScopedRoleAssignmentRequest is the request to get a scoped role assignment.
message GetScopedRoleAssignmentRequest {
  // Name is the name of the scoped role assignment.
  string name = 1;
}

// GetScopedRoleAssignmentResponse is the response to get a scoped role assignment.
message GetScopedRoleAssignmentResponse {
  // Assignment is the scoped role assignment.
  ScopedRoleAssignment assignment = 1;
}

// ListScopedRoleAssignmentsRequest is the request to list scoped role assignments.
message ListScopedRoleAssignmentsRequest {
  // PageSize is the maximum number of results to return.
  int32 page_size = 1;

  // PageToken is the pagination cursor used to start from where a previous request left off.
  string page_token = 2;

  // ResourceScope filters assignments by their resource scope if specified.
  teleport.scopes.v1.Filter resource_scope = 3;

  // AssignedScope filters assignments by the scopes they assign to if specified (note: matches assignment
  // resources with 1 or more maching scopes, not all scopes within the assignment will necessarily match).
  teleport.scopes.v1.Filter assigned_scope = 4;

  // User optionally limits the list to assignments for a specific user.
  string user = 5;

  // Role optionally limits the list to assignments for a specific role.
  string role = 6;

  // AllCallerAssignments, if set to true, overrides the default behavior in favor of returning all
  // assignments that apply to the caller, including those assigned in parent/orthogonal scopes. This flag
  // is specifically used to support users discovering where they have been granted privileges across scopes,
  // and is not intended for general use.
  bool all_caller_assignments = 7;
}

// ListScopedRoleAssignmentsResponse is the response to list scoped role assignments.
message ListScopedRoleAssignmentsResponse {
  // Assignments is the list of scoped role assignments.
  repeated ScopedRoleAssignment assignments = 1;

  // NextPageToken is a pagination cursor usable to fetch the next page of results.
  string next_page_token = 2;
}

// CreateScopedRoleAssignmentRequest is the request to create a scoped role assignment.
message CreateScopedRoleAssignmentRequest {
  // Assignment is the scoped role assignment to create.
  ScopedRoleAssignment assignment = 1;

  // RoleRevisions asserts the revisions of the roles assigned by the assignments (optional).
  map<string, string> role_revisions = 2;
}

// CreateScopedRoleAssignmentResponse is the response to create a scoped role assignment.
message CreateScopedRoleAssignmentResponse {
  // Assignment is the scoped role assignment that was created.
  ScopedRoleAssignment assignment = 1;
}

// DeleteScopedRoleAssignmentRequest is the request to delete a scoped role assignment.
message DeleteScopedRoleAssignmentRequest {
  // Name is the name of the scoped role assignment to delete.
  string name = 1;

  // Revision asserts the revision of the scoped role assignment to delete (optional).
  string revision = 2;
}

// DeleteScopedRoleAssignmentResponse is the response to delete a scoped role assignment.
message DeleteScopedRoleAssignmentResponse {}

// GetScopedAccessListRequest is a request for a scoped access list.
message GetScopedAccessListRequest {
  // Name is the name of the scoped access list.
  string name = 1;
}

// GetScopedAccessListResponse is a response for a scoped access list.
message GetScopedAccessListResponse {
  // list is the scoped access list.
  ScopedAccessList list = 1;
}

// ListScopedAccessListsRequest is a request to list scoped access lists.
message ListScopedAccessListsRequest {
  // PageSize is the maximum number of results to return.
  int32 page_size = 1;

  // PageToken is the pagination cursor used to start from where a previous request left off.
  string page_token = 2;
}

// ListScopedAccessListsResponse is a response listing scoped access lists.
message ListScopedAccessListsResponse {
  repeated ScopedAccessList lists = 1;
  string next_page_token = 2;
}

// CreateScopedAccessListRequest is a request to create a scoped access list.
message CreateScopedAccessListRequest {
  ScopedAccessList list = 1;
}

// CreateScopedAccessListResponse is a response to creating a scoped access list.
message CreateScopedAccessListResponse {
  ScopedAccessList list = 1;
}

// UpdateScopedAccessListRequest is a request to update a scoped access list.
message UpdateScopedAccessListRequest {
  ScopedAccessList list = 1;
}

// UpdateScopedAccessListResponse is a response to updating a scoped access list.
message UpdateScopedAccessListResponse {
  ScopedAccessList list = 1;
}

// DeleteScopedAccessListRequest is a request to delete a scoped access list.
message DeleteScopedAccessListRequest {
  string name = 1;

  // Revision asserts the revision of the scoped access list to delete (optional).
  string revision = 2;
}

// DeleteScopedAccessListResponse is a response to deleting a scoped access list.
message DeleteScopedAccessListResponse {}

// GetScopedAccessListMemberRequest is a request for a scoped access list member.
message GetScopedAccessListMemberRequest {
  // scoped_access_list is the name of the scoped access list that the member belongs to.
  string scoped_access_list = 1;
  // member_name is the name of the member (user or scoped access list) that belongs to the scoped access list.
  string member_name = 2;
}

// GetScopedAccessListMemberResponse is a response for a scoped access list.
message GetScopedAccessListMemberResponse {
  // member is the scoped access list.
  ScopedAccessListMember member = 1;
}

// ListScopedAccessListMembersRequest is a request to list all scoped access list members.
message ListScopedAccessListMembersRequest {
  // PageSize is the maximum number of results to return.
  int32 page_size = 1;

  // PageToken is the pagination cursor used to start from where a previous request left off.
  string page_token = 2;
}

// ListScopedAccessListMembersResponse is a response listing scoped access list members.
message ListScopedAccessListMembersResponse {
  repeated ScopedAccessListMember members = 1;
  string next_page_token = 2;
}

// CreateScopedAccessListMemberRequest is a request to create a scoped access list member.
message CreateScopedAccessListMemberRequest {
  ScopedAccessListMember member = 1;
}

// CreateScopedAccessListMemberResponse is a response to creating a scoped access list member.
message CreateScopedAccessListMemberResponse {
  ScopedAccessListMember member = 1;
}

// UpdateScopedAccessListMemberRequest is a request to update a scoped access list member.
message UpdateScopedAccessListMemberRequest {
  ScopedAccessListMember member = 1;
}

// UpdateScopedAccessListMemberResponse is a response to updating a scoped access list member.
message UpdateScopedAccessListMemberResponse {
  ScopedAccessListMember member = 1;
}

// DeleteScopedAccessListMemberRequest is a request to delete a scoped access list member.
message DeleteScopedAccessListMemberRequest {
  string scoped_access_list = 1;
  string member_name = 2;

  // Revision asserts the revision of the scoped access list member to delete (optional).
  string revision = 3;
}

// DeleteScopedAccessListMemberResponse is a response to deleting a scoped access list member.
message DeleteScopedAccessListMemberResponse {}
